[package]
name = "pame4key"
version = "0.1.0"
authors = ["Raphael Catolino <raphael.catolino@gmail.com>"]
license = "GPLv3"
homepage = "https://github.com/rcatolino/pam_ext4_keys"

[lib]
crate-type = ["dylib"]

[dependencies]
pamsm = { git = "https://github.com/rcatolino/pam_sm_rust" }
nix = "0.7.0"
ring = "0.6.1"
keyutils = { git = "https://github.com/rcatolino/rust-keyutils" }
